                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.2.0


  *) [TS-2381] Reorganize TSUrlCreate docs into separate files.

  *) [TS-2377] Install man pages as part of the build.

  *) [TS-2379] Add a new field: '%<chp>', "client_host_port" to LogFormat.

  *) [TS-2374] Abort the producer if the none of it`s consumers is alive.

  *) [TS-2327] TSRedirectUrlSet does not perform DNS lookup of redirected OS

  *) [TS-1468] Check vary and accept headers on non-200 responses in cache

  *) [TS-2352] refine THREAD_ALLOC feature.

  *) [TS-2364] Introduce slice notation to field syntax in log format.

  *) [TS-2360] Fix usage of TSMimeHdrFieldValueStringGet() IDX in some plugins.

  *) [TS-2361] Load regex_remap configuration relative to the configuration directory.

  *) [TS-2359] Make install over existing installation can fail.

  *) [TS-2350] Enhancements to traffic_top

  *) [TS-2348] Rename tstop to traffic_top.

  *) [TS-2340] Fix TextLogObject log rolling.
   Author: bettydramit <b13621367396@gmail.com>

  *) [TS-2343] Remove the --schema option from Traffic Manager, and the code
   around it.

  *) [TS-2316] header_rewrite: numerous improvements: cookie based conditions,
   rule counters, improved documentation.
   Author: Alexey Ivanov <aivanov@linkedin.com>

  *) [TS-2338] Remove IPRange.cc and .h, and SocksParser.cc.

  *) [TS-2333] Change the SAX callbacks to not clash with libxml2, which broke
   synthetic metric completely.

  *) [TS-2339] Cleanup Makefile.am, fixing missing / wrong _SOURCES entries.

  *) [TS-2341] Cast TSHttpStatus to int to suppress compiler warning in clang

  *) [TS-2303] Incorrect docs for negative_caching_enabled.
    Author: Thomas Jackson <jacksontj.89@gmail.com>

  *) [TS-2082] fix build with --enable-standalone-iocore.

  *) [TS-2712] Explicitly use subdir-objects in automake init.

  *) [TS-2309] Allow mod_generator plugin for lighttpd to accept "SI" postfixes.

